src-errormsg/E03-ElementNotList/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E03-ElementNotList/Plinth.hs:23:22: error: [GHC-39999]
    • No instance for ‘GHC.Num.Num (List Integer)’
        arising from the literal ‘42’
    • In the first argument of ‘sumIntegers’, namely ‘42’
      In the expression: sumIntegers 42
      In an equation for ‘result’: result = sumIntegers 42
   |
23 | result = sumIntegers 42
   |                      ^^
